--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <title>Portifólio | Naiara Correa</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="navegacao.css">
-    <link rel="stylesheet" href="inicio.css">
-    <link rel="stylesheet" href="sobre-mim.css">
-    <link rel="stylesheet" href="habilidades.css">
-    <link rel="stylesheet" href="rodape.css">
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/navegacao.css">
+    <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="css/sobre-mim.css">
+    <link rel="stylesheet" href="css/habilidades.css">
+    <link rel="stylesheet" href="css/rodape.css">
+    <script src="js/index.js"></script>
 
 </head>
 
